[tool.poetry]
name = "spectracker-api"
version = "2.0.0"
description = "the fastapi revision of the spectracker server"
authors = ["HillaShx <hilla.sh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
anyio = "3.5.0"
asgiref = "3.5.0"
click = "8.1.2"
fastapi = "0.75.1"
h11 = "0.13.0"
httptools = "0.4.0"
idna = "3.3"
pydantic = "1.9.0"
python-dotenv = "0.20.0"
PyYAML = "6.0"
sniffio = "1.2.0"
starlette = "0.17.1"
typing-extensions = "4.1.1"
uvicorn = "0.17.6"
uvloop = "0.16.0"
watchgod = "0.8.2"
websockets = "10.2"
CacheControl = "0.12.10"
cachy = "0.3.0"
certifi = "2021.10.8"
cffi = "1.15.0"
charset-normalizer = "2.0.12"
cleo = "0.8.1"
clikit = "0.6.2"
crashtest = "0.3.1"
cryptography = "36.0.2"
distlib = "0.3.4"
filelock = "3.6.0"
greenlet = "1.1.2"
html5lib = "1.1"
importlib-metadata = "4.11.3"
jeepney = "0.8.0"
keyring = "23.5.0"
lockfile = "0.12.2"
msgpack = "1.0.3"
packaging = "20.9"
pastel = "0.2.1"
pexpect = "4.8.0"
pkginfo = "1.8.2"
platformdirs = "2.5.1"
poetry = "1.1.13"
poetry-core = "1.0.8"
ptyprocess = "0.7.0"
pycparser = "2.21"
pylev = "1.4.0"
pyparsing = "3.0.8"
requests = "2.27.1"
requests-toolbelt = "0.9.1"
SecretStorage = "3.3.1"
shellingham = "1.4.0"
six = "1.16.0"
SQLAlchemy = "1.4.34"
tomlkit = "0.10.1"
urllib3 = "1.26.9"
virtualenv = "20.14.0"
webencodings = "0.5.1"
zipp = "3.8.0"
giticket = "^0.1.5"
psycopg2-binary = "^2.9.3"
pytest-mock = "^3.7.0"
pysqlite3 = "^0.4.7"
makefun = "^1.14.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
pytest = "^7.1.1"
pydantic-factories = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
